# portfolio-site

./: .gitignore  index.html  package-lock.json  package.json  pyproject.toml
backend/: main.py
backend/app/: config.py
backend/app/database/: database.db  models.py
backend/app/models/reviews/: router.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/assets/: aboutData.js  projectsData.js
frontend/src/assets/Data/: aboutData.js  projectsData.js
frontend/src/components/: Contact.jsx  Header.jsx  Reviews.jsx
frontend/src/components/About/: About.css  About.jsx
frontend/src/components/Contact/: Contact.css  Contact.jsx
frontend/src/components/Header/: Header.css  Header.jsx
frontend/src/components/Projects/: Projects.css  Projects.jsx
frontend/src/components/Reviews/: Reviews.css  Reviews.jsx
frontend/src/styles/: App.css
src/: App.css  App.jsx
src/assets/: aboutData.js  projectsData.js
src/components/: About.jsx  Contact.jsx  Header.jsx  Projects.jsx
src/styles/: App.css
