[tool.poetry]
name = "portfolio-git"
version = "0.1.0"
description = ""
authors = ["venya2001 <ve.po2014@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
sqlalchemy = "^2.0.29"
psycopg2-binary = "^2.9.9"
flask-cors = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
